--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3,6 +3,7 @@
 @import 'common/typography';
 
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(https://npmcdn.com/react-bootstrap-table/dist/react-bootstrap-table-all.min.css);
 
 
 * { box-sizing: border-box; }
